--- a/css/index.css
+++ b/css/index.css
@@ -71,6 +71,7 @@ footer{
     background-color: #1E0616;
     height: 4%;
     display: flex;
+    margin-top: 3.7%;
     flex-direction: column;
     align-items: center;
     padding: 25px;
@@ -97,12 +98,12 @@ h3{
     -webkit-animation: fadein .7s ease 0s 1 normal;
     animation: fadein .7s ease 0s 1 normal;
 }
-.projects-title{
+.common-title{
     text-align: center;
     margin-bottom: 20px;
     display: block;
 }
-.projects-title h1{
+.common-title h1{
     text-align: center;
     font-size: 3rem;
     margin: 0;
@@ -110,28 +111,124 @@ h3{
     box-sizing: border-box;
     font-family: Overpass,sans-serif;
     color: #fff;
-    margin-block-start: 0.83em;
+    margin-block-start: 2.4em;
     margin-block-end: 0.83em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
     display: block;
 }
-.projects-title p{
+.common-title p{
     text-align: center;
     display: block;
+    margin-bottom: 3%;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: hsla(0,0%,100%,.712);
+}
+.projects-all{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Overpass,sans-serif;
+    color: #fff;
+}
+.project-1{
+    max-width: 600px;
+    display: flex;
+    background-color: rgba(0,0,0,.438);
+    border-radius: 10px;
+    padding: 15px;
+    margin: 15px;
+    transition: all .3s ease-in-out;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+}
+.project-1-img{
+    overflow: hidden;
+    border-radius: 10px;
+    margin: 5px auto;
+    width: fit-content;
+    display: flex;
+    align-self: center;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+}
+.project-1-img img{
+    width: 200px;
+    max-width: 100%;
+    transition: all .3s ease-in-out;
+    width: 200px;
+    max-width: 100%;
+    transition: all .3s ease-in-out;
+    overflow-clip-margin: content-box;
+    overflow: clip;
+}
+.project-1-info{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+}
+.project-1-description{
+    padding: 15px;
+    max-width: 400px;
+    width: 400px;
+    display: block;
+}
+.project-1-description p{
+    color: hsla(0,0%,100%,.623);
+    display: block;
     margin-block-start: 1em;
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    color: hsla(0,0%,100%,.712);
 }
-.projects-all{
-    
+.project-1-button{
+    display: flex;
+    margin-top: auto;
+    flex-direction: row-reverse;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Overpass',sans-serif;
+    color: #fff;
+}
+
+.project-1-button a{
+    background-color: #3847f5;
+    width: 182px;
+    padding: 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    text-align: center;
+    transition: all .2s ease-in-out;
+    margin: 5px;
+    cursor: pointer;
+    box-sizing: border-box;
+    font-family: 'Overpass',sans-serif;
+    color: #fff;
+}
+h2 {
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
 }
 .introd-title h1{
     font-weight: 200;
