--- a/css/index.css
+++ b/css/index.css
@@ -76,6 +76,161 @@ footer{
     align-items: center;
     padding: 25px;
 }
+.contato-1{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 35px;
+    justify-content: center;
+    align-items: flex-end;
+    max-width: 1150px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    font-family: 'Overpass',sans-serif;
+    color: #fff;
+}
+.contato-1-card{
+    background-color: rgba(0,0,0,.57);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 300px;
+    justify-content: center;
+    border-radius: 10px;
+    margin: 15px;
+    transition: all .32s ease-in-out;
+    cursor: pointer;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+}
+.contato-1-image{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+    position: relative;
+    display: block;
+}
+.contato-1-banner{
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
+    width: 300px;
+    height: 168px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+    display: block;
+    cursor: pointer;
+}
+.contato-1-banner img{
+    transition: all .32s ease-in-out;
+    min-width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+    overflow-clip-margin: content-box;
+    overflow: clip;
+    cursor: pointer;
+}
+.contato-1-icon{
+    top: 70%;
+    left: 15px;
+    position: absolute;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+    display: block;
+    cursor:pointer;
+}
+.contato-1-icon img{
+    transition: all .32s ease-in-out;
+    width: 70px;
+    background-color: #060608;
+    border: 5px solid #060608;
+    border-radius: 20px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+    overflow-clip-margin: content-box;
+    overflow: clip;
+    cursor: pointer;
+}
+.contato-1-card:hover {
+    transform: translateY(-5px);
+    background-color: rgba(0,0,0,.76);
+    box-shadow: 0 -1px 6px 3px rgba(0,0,0,.54)
+}
+
+.contato-1-image:hover .contato-1-icon img {
+    transform: scale(1.04)
+}
+
+.contato-1-image:hover .contato-1-banner img {
+    background-color: #030404;
+    border: 5px solid #030404
+}
+.contato-1-content{
+    padding: 15px;
+    width: 100%;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+    margin: 0;
+    display: block;
+    cursor: pointer;
+}
+.contato-1-details{
+    margin-top: 15px;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+    display: block;
+    cursor: pointer;
+}
+.contato-1-details h2{
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Overpass',sans-serif;
+    color: #fff;
+    display: block;
+    font-size: 1.5em;
+    margin-block-start: 0.83em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.contato-1-details p{
+    text-align: center;
+    color: #2986f1;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Overpass',sans-serif;
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    cursor: pointer;
+}
 h3{
     font-weight: 300;
     text-align: center;
@@ -121,7 +276,6 @@ h3{
 .common-title p{
     text-align: center;
     display: block;
-    margin-bottom: 3%;
     padding: 0;
     box-sizing: border-box;
     font-family: Overpass,sans-serif;
