--- a/css/produtos.css
+++ b/css/produtos.css
@@ -26,7 +26,7 @@ header{
     width: 100%;
     z-index: 1;
     top: 0;
-    height: 15%;
+    height: 13%;
     color: white;
 }
 header ul{
@@ -62,15 +62,83 @@ navopt:hover{
 }
 body{
     background-color: #28292c;
+    height:100vh;
+    align-items: center;
 }
 main{
-    margin-top: 5%;
-    min-height: 100vh;
+    width:100%;
+    margin-top: 8%;
+}
+.title{
+    text-align: center;
+    font-size: 2.5rem;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: Overpass,sans-serif;
+    color: #fff;
+    margin-block-start: 2.4em;
+    margin-block-end: 0.83em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+    display: block;
+}
+section{
+    display: flex;
+    justify-content: center;
+}
+article {
+    height: 400px;
+    margin: 50px;
+    box-shadow: 5px 5px 20px black;
+    overflow: hidden;
+}
+main img{
+    height: 400px;
+    width: 300px;
+    border-radius: 3px;
+    transition: .5s;
+}
+.intro{
+    height: 70px;
+    width: 300px;
+    padding: 6px;
+    bottom: 3%;
+    box-sizing: border-box;
+    position: absolute;
+    background: rgba(27, 27 ,27, .5);
+    color: white;
+    transition: .5s;
+}
+.intro h1{
+    margin: 10px;
+    font-size: 40px;
+}
+.intro p{
+    font-size: 20px;
+    margin: 20px;
+    visibility: hidden;
+    opacity: 0;
+}
+.card:hover{
+    cursor: pointer;
+}
+.card:hover .intro{
+    height: 220px;
+    bottom: 3%;
+    background: black;
+}
+.card:hover p{
+    opacity: 1;
+    visibility: visible;
+}
+.card:hover img{
+    transform: scale(1.1);
 }
 footer{
     background-color: #1E0616;
     height: 4%;
-    display: flex;
     margin-top: 3.7%;
     flex-direction: column;
     align-items: center;
@@ -82,74 +150,4 @@ footer{
 }
 #logo{
     width: 50pt;
-}
-.container{
-    max-width: 1200px;
-    margin: 100px auto;
-    padding: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    box-sizing: border-box;
-    font-family: Overpass,sans-serif;
-    color: #fff;
-}
-.container h1{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Overpass,sans-serif;
-    color: #fff;
-    font-size: 7rem;
-    text-align: center;
-    margin-block-start: 0.67em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    display: block;
-}
-.container h2{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Overpass,sans-serif;
-    color: #fff;
-    display: block;
-    font-size: 1.5em;
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    text-align: center;
-}
-.container p{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Overpass,sans-serif;
-    color: #fff;
-    font-size: 1.3rem;
-    font-weight: 200;
-    margin-top: 20px;
-    text-align: center;
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-}
-.container a{
-    box-sizing: border-box;
-    font-family: Overpass,sans-serif;
-    color: #fff;
-    width: 224px;
-    padding: 12px;
-    border-radius: 5px;
-    text-decoration: none;
-    text-align: center;
-    transition: all .2s ease-in-out;
-    background-color: #3847f5;
-    margin: 30px 5px 5px;
-    cursor: pointer;
 }
