--- a/css/produtos.css
+++ b/css/produtos.css
@@ -60,6 +60,29 @@ navopt:hover{
     margin-right: 4%;
     width: 100%;
 }
+.underline{
+    display: inline-block;
+    position: relative;
+    color: white;
+}
+  
+.underline:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    transform-origin: center;
+    transition: transform 0.25s ease-out;
+}
+  
+.underline:hover:after {
+    transform: scaleX(1);
+    transform-origin: center;
+}
 body{
     background-color: #28292c;
     align-items: center;
