--- a/css/produtos.css
+++ b/css/produtos.css
@@ -116,7 +116,7 @@ article {
 main img{
     height: 300px;
     width: 400px;
-    border-radius: 3px;
+    border-radius: 3%;
     transition: .5s;
 }
 .intro{
@@ -147,6 +147,7 @@ main img{
     height: 220px;
     bottom: 20%;
     background: rgba(27, 27 ,27, .8);
+    border-radius: 3%;
 }
 .card:hover p{
     opacity: 1;
