--- a/css/produtos.css
+++ b/css/produtos.css
@@ -156,6 +156,10 @@ main img{
 .card:hover img{
     transform: scale(1.1);
 }
+p a{
+    text-decoration: none;
+    color: grey;
+}
 footer{
     background-color: #1E0616;
     height: 4%;
