isso aq fui eu q mudei

--- a/css/login.css
+++ b/css/login.css
@@ -205,6 +205,8 @@ main{
 .register-link p a:hover{
     text-decoration: underline;
 }
+
+button sv
 footer{
     background-color: #1E0616;
     height: 4%;
