--- a/css/docs.css
+++ b/css/docs.css
@@ -104,6 +104,12 @@ footer{
 #logo{
     width: 50pt;
 }
+#menu{
+    display:none;
+    visibility:hidden;
+    opacity:0;
+    width: 50pt;
+}
 .docs_container{
     max-width: 1200px;
     padding: 0 10px;
