--- a/css/404.css
+++ b/css/404.css
@@ -83,16 +83,15 @@ navopt{
 }
 body{
     background-color: #28292c;
+    overflow-y: hidden;
 }
 main{
     margin-top: 5%;
-    min-height: 100vh;
+    min-height: 80vh;
 }
 footer{
     background-color: #1E0616;
-    height: 4%;
     display: flex;
-    margin-top: 3.7%;
     flex-direction: column;
     align-items: center;
     padding: 25px;
@@ -112,8 +111,7 @@ footer{
 }
 .container{
     max-width: 1200px;
-    margin: 100px auto;
-    padding: 50px;
+    margin: 60px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
