--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,8 @@
     transition: all 2s ease-in-out;
 }
 ::-webkit-scrollbar-track {
-    background-color: transparent;
+    background: rgb(40,41,44);
+    background: linear-gradient(0deg, rgba(40,41,44,1) 10%, rgba(1,4,9,1) 100%);
 }
 ::-webkit-scrollbar {
     width: 5px;
